pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-same-ref.ub
factory: {
  state-moves: [
    { from: 'core.thing@resource.same', to: 'core.thing@resource.same' }
  ]
}
